--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "devDependencies": {
         "@eslint/js": "^9.19.0",
         "@laravel/vite-plugin-wayfinder": "^0.1.3",
+        "@types/lodash": "^4.17.20",
         "@types/node": "^22.18.13",
         "@types/ziggy-js": "^1.3.3",
         "babel-plugin-react-compiler": "^1.0.0",
@@ -53,6 +54,7 @@
         "globals": "^15.14.0",
         "input-otp": "^1.4.2",
         "laravel-vite-plugin": "^2.0",
+        "lodash": "^4.17.21",
         "lucide-react": "^0.475.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
